--- a/sass/components/plugins/_sidr.scss
+++ b/sass/components/plugins/_sidr.scss
@@ -186,7 +186,7 @@ a.sidr-class-toggle-sidr-close {
 }
 
 /* Overlay */
-.oceanwp-sidr-overlay {
+.kindling-sidr-overlay {
   position: fixed;
   top: 0;
   left: 0;
