--- a/sass/components/sidebar/_widget-contact-info.scss
+++ b/sass/components/sidebar/_widget-contact-info.scss
@@ -26,19 +26,19 @@
 		border-radius: 2px;
 	}
 
-	.oceanwp-info-wrap,
-	span.oceanwp-contact-title,
-	span.oceanwp-contact-text {
+	.kindling-info-wrap,
+	span.kindling-contact-title,
+	span.kindling-contact-text {
 	    display: block;
 	}
 
-	span.oceanwp-contact-title {
+	span.kindling-contact-title {
 	    color: #777;
 	    font-weight: bold;
 	    line-height: 1.4;
 	}
 
-	span.oceanwp-contact-text {
+	span.kindling-contact-text {
 	    line-height: 18px;
 	}
 
