--- a/sass/components/sidebar/_widget-custom-links.scss
+++ b/sass/components/sidebar/_widget-custom-links.scss
@@ -1,7 +1,7 @@
 /**
  * Custom Links Widget
  */
-.custom-links-widget .oceanwp-custom-links {
+.custom-links-widget .kindling-custom-links {
 	margin: 0;
 
 	li {
