--- a/sass/components/sidebar/_widget-custom-menu.scss
+++ b/sass/components/sidebar/_widget-custom-menu.scss
@@ -1,7 +1,7 @@
 /**
  * Custom Menu Widget
  */
-.oceanwp-custom-menu {
+.kindling-custom-menu {
 	
 	&.right {
     	text-align: right;
@@ -36,7 +36,7 @@
     }
 }
 
-.custom-menu-widget .oceanwp-custom-menu {
+.custom-menu-widget .kindling-custom-menu {
 
     > ul > li {
     	display: block;
