--- a/sass/components/sidebar/_widget-flickr.scss
+++ b/sass/components/sidebar/_widget-flickr.scss
@@ -1,7 +1,7 @@
 /**
  * Flickr Widget
  */
-.widget-oceanwp-flickr .flickr_badge_image {
+.widget-kindling-flickr .flickr_badge_image {
 	float: left;
     margin: 0 4% 10px 0;
     width: 30.6%;
