--- a/sass/components/sidebar/_widget-recent-posts.scss
+++ b/sass/components/sidebar/_widget-recent-posts.scss
@@ -1,7 +1,7 @@
 /**
  * Recent Posts Widget
  */
-.oceanwp-recent-posts {
+.kindling-recent-posts {
 	li {
 		position: relative;
 		margin-top: 15px;
