--- a/sass/components/sidebar/_widget-social-icons.scss
+++ b/sass/components/sidebar/_widget-social-icons.scss
@@ -49,28 +49,28 @@
 		    border: 1px solid $border-color;
 		}
 
-		&.oceanwp-twitter a:hover { color: #46d4fe !important; border-color: #46d4fe !important; }
-		&.oceanwp-facebook a:hover { color: #37589b !important; border-color: #37589b !important; }
-		&.oceanwp-google-plus a:hover { color: #de5a49 !important; border-color: #de5a49 !important; }
-		&.oceanwp-pinterest a:hover { color: #cb2027 !important; border-color: #cb2027 !important; }
-		&.oceanwp-dribbble a:hover { color: #ea4c89 !important; border-color: #ea4c89 !important; }
-		&.oceanwp-vk a:hover { color: #597BA5 !important; border-color: #597BA5 !important; }
-		&.oceanwp-instagram a:hover { color: #3F729B !important; border-color: #3F729B !important; }
-		&.oceanwp-linkedin a:hover { color: #3399CC !important; border-color: #3399CC !important; }
-		&.oceanwp-tumblr a:hover { color: #2C4762 !important; border-color: #2C4762 !important; }
-		&.oceanwp-github a:hover { color: #60b044 !important; border-color: #60b044 !important; }
-		&.oceanwp-flickr a:hover { color: #fa4086 !important;border-color: #fa4086 !important; }
-		&.oceanwp-skype a:hover { color: #00AFF0 !important; border-color: #00AFF0 !important; }
-		&.oceanwp-trello a:hover { color: #0079bf !important; border-color: #0079bf !important; }
-		&.oceanwp-foursquare a:hover { color: #2d5be3 !important; border-color: #2d5be3 !important; }
-		&.oceanwp-youtube a:hover { color: #C4302B !important; border-color: #C4302B !important; }
-		&.oceanwp-vimeo a:hover { color: #1ab7ea !important; border-color: #1ab7ea !important; }
-		&.oceanwp-vine a:hover { color: #00bf8f !important; border-color: #00bf8f !important; }
-		&.oceanwp-xing a:hover { color: #006464 !important; border-color: #006464 !important; }
-		&.oceanwp-yelp a:hover { color: #C41200 !important; border-color: #C41200 !important; }
-		&.oceanwp-tripadvisor a:hover { color: #589442 !important; border-color: #589442 !important; }
-		&.oceanwp-rss a:hover { color: #ff7900 !important; border-color: #ff7900 !important; }
-		&.oceanwp-email a:hover { color: #13aff0 !important; border-color: #13aff0 !important; }
+		&.kindling-twitter a:hover { color: #46d4fe !important; border-color: #46d4fe !important; }
+		&.kindling-facebook a:hover { color: #37589b !important; border-color: #37589b !important; }
+		&.kindling-google-plus a:hover { color: #de5a49 !important; border-color: #de5a49 !important; }
+		&.kindling-pinterest a:hover { color: #cb2027 !important; border-color: #cb2027 !important; }
+		&.kindling-dribbble a:hover { color: #ea4c89 !important; border-color: #ea4c89 !important; }
+		&.kindling-vk a:hover { color: #597BA5 !important; border-color: #597BA5 !important; }
+		&.kindling-instagram a:hover { color: #3F729B !important; border-color: #3F729B !important; }
+		&.kindling-linkedin a:hover { color: #3399CC !important; border-color: #3399CC !important; }
+		&.kindling-tumblr a:hover { color: #2C4762 !important; border-color: #2C4762 !important; }
+		&.kindling-github a:hover { color: #60b044 !important; border-color: #60b044 !important; }
+		&.kindling-flickr a:hover { color: #fa4086 !important;border-color: #fa4086 !important; }
+		&.kindling-skype a:hover { color: #00AFF0 !important; border-color: #00AFF0 !important; }
+		&.kindling-trello a:hover { color: #0079bf !important; border-color: #0079bf !important; }
+		&.kindling-foursquare a:hover { color: #2d5be3 !important; border-color: #2d5be3 !important; }
+		&.kindling-youtube a:hover { color: #C4302B !important; border-color: #C4302B !important; }
+		&.kindling-vimeo a:hover { color: #1ab7ea !important; border-color: #1ab7ea !important; }
+		&.kindling-vine a:hover { color: #00bf8f !important; border-color: #00bf8f !important; }
+		&.kindling-xing a:hover { color: #006464 !important; border-color: #006464 !important; }
+		&.kindling-yelp a:hover { color: #C41200 !important; border-color: #C41200 !important; }
+		&.kindling-tripadvisor a:hover { color: #589442 !important; border-color: #589442 !important; }
+		&.kindling-rss a:hover { color: #ff7900 !important; border-color: #ff7900 !important; }
+		&.kindling-email a:hover { color: #13aff0 !important; border-color: #13aff0 !important; }
 	}
 
 	.style-dark li {
@@ -79,28 +79,28 @@
 		    border: 1px solid $color-2;
 		}
 
-		&.oceanwp-twitter a:hover { color: #46d4fe !important; border-color: #46d4fe !important; }
-		&.oceanwp-facebook a:hover { color: #37589b !important; border-color: #37589b !important; }
-		&.oceanwp-google-plus a:hover { color: #de5a49 !important; border-color: #de5a49 !important; }
-		&.oceanwp-pinterest a:hover { color: #cb2027 !important; border-color: #cb2027 !important; }
-		&.oceanwp-dribbble a:hover { color: #ea4c89 !important; border-color: #ea4c89 !important; }
-		&.oceanwp-vk a:hover { color: #597BA5 !important; border-color: #597BA5 !important; }
-		&.oceanwp-instagram a:hover { color: #3F729B !important; border-color: #3F729B !important; }
-		&.oceanwp-linkedin a:hover { color: #3399CC !important; border-color: #3399CC !important; }
-		&.oceanwp-tumblr a:hover { color: #2C4762 !important; border-color: #2C4762 !important; }
-		&.oceanwp-github a:hover { color: #60b044 !important; border-color: #60b044 !important; }
-		&.oceanwp-flickr a:hover { color: #fa4086 !important;border-color: #fa4086 !important; }
-		&.oceanwp-skype a:hover { color: #00AFF0 !important; border-color: #00AFF0 !important; }
-		&.oceanwp-trello a:hover { color: #0079bf !important; border-color: #0079bf !important; }
-		&.oceanwp-foursquare a:hover { color: #2d5be3 !important; border-color: #2d5be3 !important; }
-		&.oceanwp-youtube a:hover { color: #C4302B !important; border-color: #C4302B !important; }
-		&.oceanwp-vimeo a:hover { color: #1ab7ea !important; border-color: #1ab7ea !important; }
-		&.oceanwp-vine a:hover { color: #00bf8f !important; border-color: #00bf8f !important; }
-		&.oceanwp-xing a:hover { color: #006464 !important; border-color: #006464 !important; }
-		&.oceanwp-yelp a:hover { color: #C41200 !important; border-color: #C41200 !important; }
-		&.oceanwp-tripadvisor a:hover { color: #589442 !important; border-color: #589442 !important; }
-		&.oceanwp-rss a:hover { color: #ff7900 !important; border-color: #ff7900 !important; }
-		&.oceanwp-email a:hover { color: #13aff0 !important; border-color: #13aff0 !important; }
+		&.kindling-twitter a:hover { color: #46d4fe !important; border-color: #46d4fe !important; }
+		&.kindling-facebook a:hover { color: #37589b !important; border-color: #37589b !important; }
+		&.kindling-google-plus a:hover { color: #de5a49 !important; border-color: #de5a49 !important; }
+		&.kindling-pinterest a:hover { color: #cb2027 !important; border-color: #cb2027 !important; }
+		&.kindling-dribbble a:hover { color: #ea4c89 !important; border-color: #ea4c89 !important; }
+		&.kindling-vk a:hover { color: #597BA5 !important; border-color: #597BA5 !important; }
+		&.kindling-instagram a:hover { color: #3F729B !important; border-color: #3F729B !important; }
+		&.kindling-linkedin a:hover { color: #3399CC !important; border-color: #3399CC !important; }
+		&.kindling-tumblr a:hover { color: #2C4762 !important; border-color: #2C4762 !important; }
+		&.kindling-github a:hover { color: #60b044 !important; border-color: #60b044 !important; }
+		&.kindling-flickr a:hover { color: #fa4086 !important;border-color: #fa4086 !important; }
+		&.kindling-skype a:hover { color: #00AFF0 !important; border-color: #00AFF0 !important; }
+		&.kindling-trello a:hover { color: #0079bf !important; border-color: #0079bf !important; }
+		&.kindling-foursquare a:hover { color: #2d5be3 !important; border-color: #2d5be3 !important; }
+		&.kindling-youtube a:hover { color: #C4302B !important; border-color: #C4302B !important; }
+		&.kindling-vimeo a:hover { color: #1ab7ea !important; border-color: #1ab7ea !important; }
+		&.kindling-vine a:hover { color: #00bf8f !important; border-color: #00bf8f !important; }
+		&.kindling-xing a:hover { color: #006464 !important; border-color: #006464 !important; }
+		&.kindling-yelp a:hover { color: #C41200 !important; border-color: #C41200 !important; }
+		&.kindling-tripadvisor a:hover { color: #589442 !important; border-color: #589442 !important; }
+		&.kindling-rss a:hover { color: #ff7900 !important; border-color: #ff7900 !important; }
+		&.kindling-email a:hover { color: #13aff0 !important; border-color: #13aff0 !important; }
 	}
 
 	.style-colored li {
@@ -112,50 +112,50 @@
 		    }
 		}
 
-		&.oceanwp-twitter a { background-color: #46d4fe; }
-		&.oceanwp-twitter a:hover { background-color: #39b4d8; }
-		&.oceanwp-facebook a { background-color: #37589b; }
-		&.oceanwp-facebook a:hover{ background-color: #2d477c; }
-		&.oceanwp-google-plus a { background-color: #de5a49; }
-		&.oceanwp-google-plus a:hover { background-color: #bb4c3e; }
-		&.oceanwp-pinterest a { background-color: #cb2027; }
-		&.oceanwp-pinterest a:hover { background-color: #a91d23; }
-		&.oceanwp-dribbble a { background-color: #ea4c89; }
-		&.oceanwp-dribbble a:hover { background-color: #c64174; }
-		&.oceanwp-vk a { background-color: #597BA5; }
-		&.oceanwp-vk a:hover { background-color: #486384; }
-		&.oceanwp-instagram a { background-color: #3F729B; }
-		&.oceanwp-instagram a:hover { background-color: #315a7c; }
-		&.oceanwp-linkedin a { background-color: #3399CC; }
-		&.oceanwp-linkedin a:hover { background-color: #2678a1; }
-		&.oceanwp-tumblr a { background-color: #2C4762; }
-		&.oceanwp-tumblr a:hover { background-color: #1d3042; }
-		&.oceanwp-github a { background-color: #60b044; }
-		&.oceanwp-github a:hover { background-color: #4f9237; }
-		&.oceanwp-flickr a { background-color: #fa4086; }
-		&.oceanwp-flickr a:hover { background-color: #c63169; }
-		&.oceanwp-skype a { background-color: #00AFF0; }
-		&.oceanwp-skype a:hover { background-color: #0291c6; }
-		&.oceanwp-trello a { background-color: #0079bf; }
-		&.oceanwp-trello a:hover { background-color: #0079bf; }
-		&.oceanwp-foursquare a { background-color: #2d5be3; }
-		&.oceanwp-foursquare a:hover { background-color: #2d5be3; }
-		&.oceanwp-youtube a { background-color: #C4302B; }
-		&.oceanwp-youtube a:hover { background-color: #982420; }
-		&.oceanwp-vimeo a { background-color: #1ab7ea; }
-		&.oceanwp-vimeo a:hover { background-color: #1494bd; }
-		&.oceanwp-vine a { background-color: #00bf8f; }
-		&.oceanwp-vine a:hover { background-color: #01906c; }
-		&.oceanwp-xing a { background-color: #006464; }
-		&.oceanwp-xing a:hover { background-color: #014646; }
-		&.oceanwp-yelp a { background-color: #C41200; }
-		&.oceanwp-yelp a:hover { background-color: #940f01; }
-		&.oceanwp-tripadvisor a { background-color: #589442; }
-		&.oceanwp-tripadvisor a:hover { background-color: #426f32; }
-		&.oceanwp-rss a { background-color: #ff7900; }
-		&.oceanwp-rss a:hover { background-color: #d46603; }
-		&.oceanwp-email a { background-color: #13aff0; }
-		&.oceanwp-email a:hover { background-color: #0f8dc2; }
+		&.kindling-twitter a { background-color: #46d4fe; }
+		&.kindling-twitter a:hover { background-color: #39b4d8; }
+		&.kindling-facebook a { background-color: #37589b; }
+		&.kindling-facebook a:hover{ background-color: #2d477c; }
+		&.kindling-google-plus a { background-color: #de5a49; }
+		&.kindling-google-plus a:hover { background-color: #bb4c3e; }
+		&.kindling-pinterest a { background-color: #cb2027; }
+		&.kindling-pinterest a:hover { background-color: #a91d23; }
+		&.kindling-dribbble a { background-color: #ea4c89; }
+		&.kindling-dribbble a:hover { background-color: #c64174; }
+		&.kindling-vk a { background-color: #597BA5; }
+		&.kindling-vk a:hover { background-color: #486384; }
+		&.kindling-instagram a { background-color: #3F729B; }
+		&.kindling-instagram a:hover { background-color: #315a7c; }
+		&.kindling-linkedin a { background-color: #3399CC; }
+		&.kindling-linkedin a:hover { background-color: #2678a1; }
+		&.kindling-tumblr a { background-color: #2C4762; }
+		&.kindling-tumblr a:hover { background-color: #1d3042; }
+		&.kindling-github a { background-color: #60b044; }
+		&.kindling-github a:hover { background-color: #4f9237; }
+		&.kindling-flickr a { background-color: #fa4086; }
+		&.kindling-flickr a:hover { background-color: #c63169; }
+		&.kindling-skype a { background-color: #00AFF0; }
+		&.kindling-skype a:hover { background-color: #0291c6; }
+		&.kindling-trello a { background-color: #0079bf; }
+		&.kindling-trello a:hover { background-color: #0079bf; }
+		&.kindling-foursquare a { background-color: #2d5be3; }
+		&.kindling-foursquare a:hover { background-color: #2d5be3; }
+		&.kindling-youtube a { background-color: #C4302B; }
+		&.kindling-youtube a:hover { background-color: #982420; }
+		&.kindling-vimeo a { background-color: #1ab7ea; }
+		&.kindling-vimeo a:hover { background-color: #1494bd; }
+		&.kindling-vine a { background-color: #00bf8f; }
+		&.kindling-vine a:hover { background-color: #01906c; }
+		&.kindling-xing a { background-color: #006464; }
+		&.kindling-xing a:hover { background-color: #014646; }
+		&.kindling-yelp a { background-color: #C41200; }
+		&.kindling-yelp a:hover { background-color: #940f01; }
+		&.kindling-tripadvisor a { background-color: #589442; }
+		&.kindling-tripadvisor a:hover { background-color: #426f32; }
+		&.kindling-rss a { background-color: #ff7900; }
+		&.kindling-rss a:hover { background-color: #d46603; }
+		&.kindling-email a { background-color: #13aff0; }
+		&.kindling-email a:hover { background-color: #0f8dc2; }
 	}
 
 	.style-simple li {
