--- a/sass/components/sidebar/_widget-instagram.scss
+++ b/sass/components/sidebar/_widget-instagram.scss
@@ -1,7 +1,7 @@
 /**
  * Instagram Widget
  */
-.oceanwp-instagram-pics li {
+.kindling-instagram-pics li {
     display: block;
     float: left;
     height: 100%;
@@ -10,61 +10,61 @@
     transition: all .3s ease;
 }
 
-.oceanwp-instagram-pics.margin li {
+.kindling-instagram-pics.margin li {
     padding: 3px;
 }
 
-.oceanwp-instagram-pics li a {
+.kindling-instagram-pics li a {
     vertical-align: top;
 }
 
-.oceanwp-instagram-pics li img {
+.kindling-instagram-pics li img {
     display: block;
     width: 100%;
 }
 
-.oceanwp-instagram-pics li:hover {
+.kindling-instagram-pics li:hover {
     opacity: 0.8;
 }
 
 /*header*/
-.oceanwp-instagram-header {
+.kindling-instagram-header {
     position: relative;
     padding: 10px;
 }
 
-.oceanwp-instagram-header.oceanwp-left {
+.kindling-instagram-header.kindling-left {
     text-align: left;
 }
 
-.oceanwp-instagram-header.oceanwp-right {
+.kindling-instagram-header.kindling-right {
     text-align: right;
 }
 
-.oceanwp-instagram-header.oceanwp-center {
+.kindling-instagram-header.kindling-center {
     text-align: center;
 }
 
 /*header avatar*/
-.oceanwp-instagram-avatar {
+.kindling-instagram-avatar {
     line-height: 1;
 }
 
-.oceanwp-instagram-header.oceanwp-left .oceanwp-instagram-avatar {
+.kindling-instagram-header.kindling-left .kindling-instagram-avatar {
     float: left;
     margin-right: 10px;
 }
 
-.oceanwp-instagram-header.oceanwp-right .oceanwp-instagram-avatar {
+.kindling-instagram-header.kindling-right .kindling-instagram-avatar {
     float: right;
     margin-left: 10px;
 }
 
-.oceanwp-instagram-header.oceanwp-center .oceanwp-instagram-avatar {
+.kindling-instagram-header.kindling-center .kindling-instagram-avatar {
     margin: 0 0 10px;
 }
 
-.oceanwp-instagram-avatar a {
+.kindling-instagram-avatar a {
     position: relative;
     display: inline-block;
     width: 75px;
@@ -72,21 +72,21 @@
     overflow: hidden;
 }
 
-.oceanwp-instagram-avatar.square a,
-.oceanwp-instagram-avatar.square a img {
+.kindling-instagram-avatar.square a,
+.kindling-instagram-avatar.square a img {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
 }
 
-.oceanwp-instagram-avatar.rounded a,
-.oceanwp-instagram-avatar.rounded a img {
+.kindling-instagram-avatar.rounded a,
+.kindling-instagram-avatar.rounded a img {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
 }
 
-.oceanwp-instagram-avatar a img {
+.kindling-instagram-avatar a img {
     width: 75px;
     height: 75px;
     -webkit-transition: all .3s ease;
@@ -94,11 +94,11 @@
     transition: all .3s ease;
 }
 
-.oceanwp-instagram-avatar a:hover img {
+.kindling-instagram-avatar a:hover img {
     opacity: 0.5;
 }
 
-.oceanwp-instagram-follow {
+.kindling-instagram-follow {
     position: absolute;
     top: 0;
     margin-top: -12px;
@@ -112,7 +112,7 @@
     transition: all ease-out .2s;
 }
 
-.oceanwp-instagram-follow span {
+.kindling-instagram-follow span {
     display: inline-block;
     padding: 4px 6px;
     font-size: 10px;
@@ -134,13 +134,13 @@
     border-radius: 3px;
 }
 
-.oceanwp-instagram-avatar a:hover .oceanwp-instagram-follow {
+.kindling-instagram-avatar a:hover .kindling-instagram-follow {
     top: 50%;
     opacity: 1;
 }
 
 /*header info*/
-.oceanwp-instagram-info .oceanwp-instagram-username {
+.kindling-instagram-info .kindling-instagram-username {
     display: block;
     font-size: 16px;
     font-weight: 600;
@@ -149,42 +149,42 @@
     text-transform: capitalize;
 }
 
-.oceanwp-instagram-info .oceanwp-instagram-desc {
+.kindling-instagram-info .kindling-instagram-desc {
     display: block;
     line-height: 1.3;
     margin: 0;
 }
 
 /*style 1*/
-.oceanwp-instagram-pics.style-one li:first-child {
+.kindling-instagram-pics.style-one li:first-child {
     width: 100%;
 }
 
-.oceanwp-instagram-pics.style-one li {
+.kindling-instagram-pics.style-one li {
     width: 33.33%;
 }
 
 /*style 2*/
-.oceanwp-instagram-pics.style-two li:nth-child(1),
-.oceanwp-instagram-pics.style-two li:nth-child(2) {
+.kindling-instagram-pics.style-two li:nth-child(1),
+.kindling-instagram-pics.style-two li:nth-child(2) {
     width: 50%;
 }
 
-.oceanwp-instagram-pics.style-two li {
+.kindling-instagram-pics.style-two li {
     width: 25%;
 }
 
 /*style 3*/
-.oceanwp-instagram-pics.style-three li:nth-child(4n+1) {
+.kindling-instagram-pics.style-three li:nth-child(4n+1) {
     width: 100%;
 }
 
-.oceanwp-instagram-pics.style-three li {
+.kindling-instagram-pics.style-three li {
     width: 33.33%;
 }
 
 /*style 4*/
-.oceanwp-style-four-wrap {
+.kindling-style-four-wrap {
     background: #f6f6f6;
     border-bottom: 3px solid #eee;
     -webkit-border-radius: 3px;
@@ -192,7 +192,7 @@
     border-radius: 3px;
 }
 
-.oceanwp-instagram-bar {
+.kindling-instagram-bar {
     background-color: #6f97b6;
     background-image: -webkit-gradient(linear,left top,left bottom,from(#6f97b6),to(#3f729b));
     background-image: -webkit-linear-gradient(top,#6f97b6,#3f729b);
@@ -206,7 +206,7 @@
     overflow: hidden;
 }
 
-.oceanwp-instagram-bar .instagram-logo {
+.kindling-instagram-bar .instagram-logo {
     display: block;
     margin: 8px auto 6px;
     width: 96px;
@@ -214,7 +214,7 @@
     background: url( './assets/img/instagram-logo.png' ) no-repeat;
 }
 
-.oceanwp-style-four-wrap .oceanwp-instagram-header {
+.kindling-style-four-wrap .kindling-instagram-header {
     background-color: #fff;
     padding: 20px 15px;
     border-left-width: 1px;
@@ -224,12 +224,12 @@
     border-color: #eaeaea;
 }
 
-.oceanwp-style-four-wrap .oceanwp-instagram-header.oceanwp-after {
+.kindling-style-four-wrap .kindling-instagram-header.kindling-after {
     border-top: 1px solid #eaeaea;
     margin-bottom: 10px;
 }
 
-.oceanwp-instagram-pics.style-four.margin li img {
+.kindling-instagram-pics.style-four.margin li img {
     padding: 3px;
     background: #fff;
     -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,.04),0 1px 5px rgba(0,0,0,.1);
@@ -237,7 +237,7 @@
     box-shadow: 0 0 0 1px rgba(0,0,0,.04),0 1px 5px rgba(0,0,0,.1);
 }
 
-.oceanwp-instagram-pics.style-four {
+.kindling-instagram-pics.style-four {
     padding: 10px;
     border-left-width: 1px;
     border-right-width: 1px;
@@ -245,63 +245,63 @@
     border-color: #eaeaea;
 }
 
-.oceanwp-instagram-pics.style-four li {
+.kindling-instagram-pics.style-four li {
     width: 33.33%;
 }
 
 /*two columns*/
-.oceanwp-instagram-pics.two-columns li {
+.kindling-instagram-pics.two-columns li {
     width: 50%;
 }
 
 /*three columns*/
-.oceanwp-instagram-pics.three-columns li {
+.kindling-instagram-pics.three-columns li {
     width: 33.33%;
 }
 
 /*four columns*/
-.oceanwp-instagram-pics.four-columns li {
+.kindling-instagram-pics.four-columns li {
     width: 25%;
 }
 
 /*five columns*/
-.oceanwp-instagram-pics.five-columns li {
+.kindling-instagram-pics.five-columns li {
     width: 20%;
 }
 
 /*six columns*/
-.oceanwp-instagram-pics.six-columns li {
+.kindling-instagram-pics.six-columns li {
     width: 16.66%;
 }
 
 /*seven columns*/
-.oceanwp-instagram-pics.seven-columns li {
+.kindling-instagram-pics.seven-columns li {
     width: 14.28%;
 }
 
 /*eight columns*/
-.oceanwp-instagram-pics.eight-columns li {
+.kindling-instagram-pics.eight-columns li {
     width: 12.5%;
 }
 
 /*nine columns*/
-.oceanwp-instagram-pics.nine-columns li {
+.kindling-instagram-pics.nine-columns li {
     width: 11.11%;
 }
 
 /*ten columns*/
-.oceanwp-instagram-pics.ten-columns li {
+.kindling-instagram-pics.ten-columns li {
     width: 10%;
 }
 
 /*link*/
-.oceanwp-instagram-link {
+.kindling-instagram-link {
     display: block;
     margin: 10px 0 0;
     text-align: center;
 }
 
-.oceanwp-instagram-link a {
+.kindling-instagram-link a {
     display: inline-block;
     font-size: 12px;
     line-height: 1.2;
@@ -312,7 +312,7 @@
 }
 
 /*style four link*/
-.oceanwp-style-four-wrap .oceanwp-instagram-link {
+.kindling-style-four-wrap .kindling-instagram-link {
     padding: 3px 0 16px;
     margin: 0;
     border-left-width: 1px;
@@ -321,7 +321,7 @@
     border-color: #eaeaea;
 }
 
-.oceanwp-style-four-wrap .oceanwp-instagram-link a {
+.kindling-style-four-wrap .kindling-instagram-link a {
     display: block;
     background-color: #5582A7;
     color: #fff;
@@ -339,7 +339,7 @@
     box-shadow: 0 0 0 1px rgba(0,0,0,0.04),0 1px 3px rgba(0,0,0,0.1);
 }
 
-.oceanwp-style-four-wrap .oceanwp-instagram-link a:hover {
+.kindling-style-four-wrap .kindling-instagram-link a:hover {
     background-color: #3f729b;
     color: #fff;
 }
