--- a/sass/components/topbar/_topbar-social.scss
+++ b/sass/components/topbar/_topbar-social.scss
@@ -23,26 +23,26 @@
       color: $color-13;
     }
 
-    &.oceanwp-twitter a:hover { color: #46d4fe; }
-    &.oceanwp-facebook a:hover { color: #37589b; }
-    &.oceanwp-googleplus a:hover { color: #de5a49; }
-    &.oceanwp-pinterest a:hover { color: #cb2027; }
-    &.oceanwp-dribbble a:hover { color: #ea4c89; }
-    &.oceanwp-vk a:hover { color: #597BA5; }
-    &.oceanwp-instagram a:hover { color: #3F729B; }
-    &.oceanwp-linkedin a:hover { color: #3399CC; }
-    &.oceanwp-tumblr a:hover { color: #2C4762; }
-    &.oceanwp-github a:hover { color: #60b044; }
-    &.oceanwp-flickr a:hover { color: #fa4086; }
-    &.oceanwp-skype a:hover { color: #00AFF0; }
-    &.oceanwp-youtube a:hover { color: #C4302B; }
-    &.oceanwp-vimeo a:hover { color: #1ab7ea; }
-    &.oceanwp-vine a:hover { color: #00bf8f; }
-    &.oceanwp-xing a:hover { color: #006464; }
-    &.oceanwp-yelp a:hover { color: #C41200; }
-    &.oceanwp-tripadvisor a:hover { color: #589442; }
-    &.oceanwp-rss a:hover { color: #ff7900; }
-    &.oceanwp-email a:hover { color: #13aff0; }
+    &.kindling-twitter a:hover { color: #46d4fe; }
+    &.kindling-facebook a:hover { color: #37589b; }
+    &.kindling-googleplus a:hover { color: #de5a49; }
+    &.kindling-pinterest a:hover { color: #cb2027; }
+    &.kindling-dribbble a:hover { color: #ea4c89; }
+    &.kindling-vk a:hover { color: #597BA5; }
+    &.kindling-instagram a:hover { color: #3F729B; }
+    &.kindling-linkedin a:hover { color: #3399CC; }
+    &.kindling-tumblr a:hover { color: #2C4762; }
+    &.kindling-github a:hover { color: #60b044; }
+    &.kindling-flickr a:hover { color: #fa4086; }
+    &.kindling-skype a:hover { color: #00AFF0; }
+    &.kindling-youtube a:hover { color: #C4302B; }
+    &.kindling-vimeo a:hover { color: #1ab7ea; }
+    &.kindling-vine a:hover { color: #00bf8f; }
+    &.kindling-xing a:hover { color: #006464; }
+    &.kindling-yelp a:hover { color: #C41200; }
+    &.kindling-tripadvisor a:hover { color: #589442; }
+    &.kindling-rss a:hover { color: #ff7900; }
+    &.kindling-email a:hover { color: #13aff0; }
   }
 }
 
