--- a/inc/customizer/controls/general.css
+++ b/inc/customizer/controls/general.css
@@ -67,3 +67,10 @@ input, select { margin: 0; padding: 5px 10px; }
 /* Select */
 body .selectize-input { height: 36px; line-height: 36px; padding: 0 8px; }
 body .selectize-dropdown { position: absolute; top: 36px !important; }
+
+/* Export & Import */
+.cei-form { position: absolute; left: -99999px; }
+.cei-hr { margin: 20px 0px 10px; }
+.cei-import-file { background: #eeeeee; width: 100%; margin: 10px 0; padding: 10px; font-size: 12px; }
+.cei-import-images { display: block; margin-bottom: 10px; }
+.cei-uploading { background: #eeeeee; display: none; margin: 10px 0; padding: 10px; font-size: 12px; }
